--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- awesone fonts css-->
-    <link href="css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome.css" rel="stylesheet" type="text/css">
     <!-- owl carousel css-->
     <link rel="stylesheet" href="owl-carousel/assets/owl.carousel.min.css" type="text/css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!-- custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   <!--  <title>Solution - Free Responsive Agency Template using Bootstrap 4</title> -->
   <!-- Default Statcounter code for qvsdeals https://qvsdeals.online/ -->
 <script type="text/javascript">
